--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@popperjs/core": "^2.11.8",
     "angular-popper": "^2.0.1",
     "bootstrap": "^5.3.3",
+    "eslint": "^8.52.0",
     "jquery": "^3.7.1",
     "ngx-image-zoom": "^3.0.0",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
